Remove untested rule and fix weird + sign

--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -41,19 +41,18 @@ When distributing Far Tiles (II--III) between players, each player's pool of Map
 
 \includegraphics[width=\linewidth]{\art/medusa.jpg}
 
-\subsection*{War Machines as Artifacts}
-
-Shuffle one of each War Machine into the Artifact Deck before the start of the game.
-If using the optional Tournament rule of splitting the Artifact Deck, shuffle the War Machines into the Major Artifact Deck.
-
 \subsection*{Round One Mulligan}
 
 At the start of the \nth{1} Round, each player may reshuffle their hand of Cards back into their Deck of Might and Magic and draw a new starting hand of Cards once.
 
-\subsection*{Tier V--VII Combat on Hard+ Difficulty}
+\subsection*{Tier V--VII Combat on Hard$+$\\Difficulty}
 
 Treat Level V--VII Combats as one difficulty step lower when playing on Hard or Impossible.
 For example, a Level VII Combat on Hard will be against 2 × \svgunit{azure} Neutral Units.
+
+\begin{center}
+  \transparent{0.3}{\includegraphics[width=\linewidth]{\art/black_market.png}}
+\end{center}
 
 \subsection*{Trading Post}
 
