--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -3,7 +3,7 @@
 
 \iftoggle{printable}{}{\bigbreak}
 
-\begin{multicols}{2}
+\begin{multicols*}{2}
 We've compiled some custom rules and best practices to enhance your gaming experience.
 Keep in mind that these are just the \textbf{opinions of the authors} of this book.
 Enjoy!
@@ -33,11 +33,43 @@ In this case, that would be 6 hours.
 Except for the Magic Arrow, each Spell appears exactly twice in the Spell Deck.
 After players prepare their starting M\&M Decks, it is recommended to remove Magic Arrows from the Spell Deck until no more than two remain.
 
+\subsection*{Guaranteed Settlement}
+
+When distributing Far Tiles (II--III) between players, each player's pool of Map Tiles must include one Settlement.
+
+\includegraphics[width=\linewidth]{\art/rogue.jpg}
+
+\includegraphics[width=\linewidth]{\art/medusa.jpg}
+
+\subsection*{Round One Mulligan}
+
+At the start of the \nth{1} Round, each player may reshuffle their hand of Cards back into their Deck of Might and Magic and draw a new starting hand of Cards once.
+
+\subsection*{Tier V--VII Combat on Hard$+$\\Difficulty}
+
+Treat Level V--VII Combats as one difficulty step lower when playing on Hard or Impossible.
+For example, a Level VII Combat on Hard will be against 2 × \svgunit{azure} Neutral Units.
+
+\begin{center}
+  \transparent{0.3}{\includegraphics[width=\linewidth]{\art/black_market.png}}
+\end{center}
+
 \subsection*{Trading Post}
 
 Although rules as written state that you can remove only one Card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.
 
-\includegraphics[width=\linewidth]{\art/rogue.jpg}
+\subsection*{Victory Points}
+
+When playing with the optional Victory Points from the Tournament book, the following rules apply (unless overruled by the Scenario):
+\begin{itemize}
+  \item Faction Towns grant 1 VP.
+  \item Possessing the Grail at the end of the match grants 3 VPs. If the Grail was transported to that player's Faction Town, it grants 5 VPs instead.
+  \item Capturing a Dragon Utopia grants 3 VPs.
+\end{itemize}
+
+\end{multicols*}
+
+\begin{multicols}{2}
 
 \subsection*{Combat with Neutral Units}
 
