--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-09-25 10:08+0200\n"
+"POT-Creation-Date: 2024-09-27 10:06+0200\n"
 "PO-Revision-Date: 2024-07-28 15:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -23,7 +23,8 @@ msgstr ""
 #: clash/dragoncurse_castle.tex:5 campaigns/inferno_devilish_plan.tex:6
 #: campaigns/inferno_steadwicks_fall.tex:5
 #: campaigns/inferno_deal_with_the_devil.tex:5 sections/what_to_play.tex:5
-#: sections/recommendations.tex:96 sections/credits.tex:10
+#: sections/recommendations.tex:73 sections/recommendations.tex:128
+#: sections/credits.tex:10
 #, no-wrap
 msgid ""
 "{2}\n"
@@ -41,7 +42,7 @@ msgstr "\\addsection{Doporučení}{\\art/haste.png}"
 msgid "\\iftoggle{printable}{}{\\bigbreak}"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:10
 #, no-wrap
 msgid ""
@@ -57,7 +58,7 @@ msgstr ""
 "Ať se líbí!\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:12
 #, no-wrap
 msgid ""
@@ -67,7 +68,7 @@ msgstr ""
 "\\subsection*{Herní Doba}\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:14
 #, no-wrap
 msgid ""
@@ -77,7 +78,7 @@ msgstr ""
 "\\textbf{Minimální} herní dobu můžete odhadnout pomocí následujícího vzorce:\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:18
 #, no-wrap
 msgid ""
@@ -91,7 +92,7 @@ msgstr ""
 "\\end{center}\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:24
 #, no-wrap
 msgid ""
@@ -109,7 +110,7 @@ msgstr ""
 "\\end{itemize}\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:27
 #, no-wrap
 msgid ""
@@ -121,7 +122,7 @@ msgstr ""
 "Vaše očekávaná minimální herní doba bude kolem 3 hodin.\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:30
 #, no-wrap
 msgid ""
@@ -133,7 +134,7 @@ msgstr ""
 "V tomto případě by to bylo kolem 6 hodin.\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:32
 #, no-wrap
 msgid ""
@@ -143,7 +144,7 @@ msgstr ""
 "\\subsection*{Magické Šípy}\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:35
 #, no-wrap
 msgid ""
@@ -155,8 +156,93 @@ msgstr ""
 "Po přípravě Startovních M\\&M Balíčků všech hráčů se doporučuje odstranit Magické Šípy z Balíčku Kouzel, dokud nezůstanou více než dva.\n"
 "\n"
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:37
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\subsection*{\\MakeUppercase{Heroes Placement}}\n"
+#| "\n"
+msgid ""
+"\\subsection*{Guaranteed Settlement}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Umístění Hrdinů}}\n"
+"\n"
+
+#. type: multicols*
+#: sections/recommendations.tex:39
+#, no-wrap
+msgid ""
+"When distributing Far Tiles (II--III) between players, each player's pool of Map Tiles must include one Settlement.\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:41
+#, no-wrap
+msgid ""
+"\\includegraphics[width=\\linewidth]{\\art/rogue.jpg}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:43
+#, no-wrap
+msgid ""
+"\\includegraphics[width=\\linewidth]{\\art/medusa.jpg}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:45
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\subsection*{Recommendations}\n"
+#| "\n"
+msgid ""
+"\\subsection*{Round One Mulligan}\n"
+"\n"
+msgstr ""
+"\\subsection*{Doporučení}\n"
+"\n"
+
+#. type: multicols*
+#: sections/recommendations.tex:47
+#, no-wrap
+msgid ""
+"At the start of the \\nth{1} Round, each player may reshuffle their hand of Cards back into their Deck of Might and Magic and draw a new starting hand of Cards once.\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:49
+#, no-wrap
+msgid ""
+"\\subsection*{Tier V--VII Combat on Hard$+$\\\\Difficulty}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:52
+#, no-wrap
+msgid ""
+"Treat Level V--VII Combats as one difficulty step lower when playing on Hard or Impossible.\n"
+"For example, a Level VII Combat on Hard will be against 2 × \\svgunit{azure} Neutral Units.\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:56
+#, no-wrap
+msgid ""
+"\\begin{center}\n"
+"  \\transparent{0.3}{\\includegraphics[width=\\linewidth]{\\art/black_market.png}}\n"
+"\\end{center}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:58
 #, no-wrap
 msgid ""
 "\\subsection*{Trading Post}\n"
@@ -165,8 +251,8 @@ msgstr ""
 "\\subsection*{Tržiště}\n"
 "\n"
 
-#. type: multicols
-#: sections/recommendations.tex:39
+#. type: multicols*
+#: sections/recommendations.tex:60
 #, fuzzy, no-wrap
 #| msgid ""
 #| "Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
@@ -178,16 +264,34 @@ msgstr ""
 "I když pravidla říkají, že při Navštívení Tržiště můžete odstranit pouze jednu kartu z ruky, doporučuje se povolit odstranění libovolného počtu karet.\n"
 "\n"
 
-#. type: multicols
-#: sections/recommendations.tex:41
+#. type: multicols*
+#: sections/recommendations.tex:62
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\subsection*{Magic Arrows}\n"
+#| "\n"
+msgid ""
+"\\subsection*{Victory Points}\n"
+"\n"
+msgstr ""
+"\\subsection*{Magické Šípy}\n"
+"\n"
+
+#. type: multicols*
+#: sections/recommendations.tex:69
 #, no-wrap
 msgid ""
-"\\includegraphics[width=\\linewidth]{\\art/rogue.jpg}\n"
+"When playing with the optional Victory Points from the Tournament book, the following rules apply (unless overruled by the Scenario):\n"
+"\\begin{itemize}\n"
+"  \\item Faction Towns grant 1 VP.\n"
+"  \\item Possessing the Grail at the end of the match grants 3 VPs. If the Grail was transported to that player's Faction Town, it grants 5 VPs instead.\n"
+"  \\item Capturing a Dragon Utopia grants 3 VPs.\n"
+"\\end{itemize}\n"
 "\n"
 msgstr ""
 
 #. type: multicols
-#: sections/recommendations.tex:43
+#: sections/recommendations.tex:75
 #, no-wrap
 msgid ""
 "\\subsection*{Combat with Neutral Units}\n"
@@ -197,7 +301,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: sections/recommendations.tex:45
+#: sections/recommendations.tex:77
 #, no-wrap
 msgid ""
 "During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
@@ -207,7 +311,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: sections/recommendations.tex:49
+#: sections/recommendations.tex:81
 #, no-wrap
 msgid ""
 "Placing Neutral Units far apart only makes the other player waste MPs, which slows the game down.\n"
@@ -221,7 +325,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: sections/recommendations.tex:53
+#: sections/recommendations.tex:85
 #, no-wrap
 msgid ""
 "\\begin{center}\n"
@@ -231,7 +335,7 @@ msgid ""
 msgstr ""
 
 #. type: figure*
-#: sections/recommendations.tex:74
+#: sections/recommendations.tex:106
 #, no-wrap
 msgid ""
 "[!h]\n"
@@ -271,7 +375,7 @@ msgstr ""
 "  \\mbox{}"
 
 #. type: figure*
-#: sections/recommendations.tex:94
+#: sections/recommendations.tex:126
 #, no-wrap
 msgid ""
 "[!h]\n"
@@ -309,7 +413,7 @@ msgstr ""
 "  \\mbox{}"
 
 #. type: multicols
-#: sections/recommendations.tex:98
+#: sections/recommendations.tex:130
 #, no-wrap
 msgid ""
 "\\subsection*{General Recommendations}\n"
@@ -319,7 +423,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: sections/recommendations.tex:100
+#: sections/recommendations.tex:132
 #, no-wrap
 msgid ""
 "The following are not custom rules, but rather recommendations to help you get the most out of your game:\n"
@@ -329,7 +433,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: sections/recommendations.tex:107
+#: sections/recommendations.tex:139
 #, fuzzy, no-wrap
 #| msgid ""
 #| "\\begin{itemize}\n"
@@ -357,7 +461,7 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: sections/recommendations.tex:111
+#: sections/recommendations.tex:143
 #, no-wrap
 msgid ""
 "\\begin{center}\n"
